@@ -81,9 +81,9 @@ POST_UNINSTALL = :
 ## _triplet values?
 ## FIXME: this should probably use generic %configure_vars method.
 ## Let's wait until we rely upon traces.
-?BUILD?	build_alias = @build_alias@
-?BUILD?	build_triplet = @build@
-?HOST?	host_alias = @host_alias@
-?HOST?	host_triplet = @host@
-?TARGET?	target_alias = @target_alias@
-?TARGET?	target_triplet = @target@
+?BUILD?build_alias = @build_alias@
+?BUILD?build_triplet = @build@
+?HOST?host_alias = @host_alias@
+?HOST?host_triplet = @host@
+?TARGET?target_alias = @target_alias@
+?TARGET?target_triplet = @target@
