@@ -1,3 +1,7 @@
+2001-02-21  Pavel Roskin  <proski@gnu.org>
+
+	* header-vars.am: Remove tabs before variable definitions.
+
 2001-02-21  Akim Demaille  <akim@epita.fr>
 
 	* tests/distdir.test (EXTRA_DIST): Use a finer pattern to avoid
